<resources>
    <string name="app_name">Organizer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="title_activity_task_details">Task Details</string>
    <string name="task_name_hint">Name</string>
    <string name="task_description_hint">Description</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="task_completed">Task completed</string>
    <string name="undo">Undo</string>
    <string name="due_date_label">Due date</string>
    <string name="task_due_date_hint">Due date</string>
    <string name="task_priority_hint">Priority</string>
    <string name="add_button_description">Add a new task</string>
    <string name="list_date_format">dd MMM</string>
    <string name="details_date_format">dd MMM yyyy</string>
    <string name="details_time_format">hh:mm</string>
    <string name="repeat_period_hint">Repeat every:</string>
    <string name="repeat_days" >days</string>
    <string name="repeat_months">months</string>
    <string name="repeat_years">years</string>
    <string-array name="priorities">
        <item>(None)</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string name="notification_channel_id" translatable="false">com.vlopmartin.organizer.notifications</string>
    <string name="notification_channel_name" translatable="false">OrganizerNotifications</string>
    <string name="notification_channel_description" translatable="false">Notifications for Organizer</string>
    <string name="task_notification_hint">Reminder time</string>
    <string name="complete_button">Complete</string>
</resources>
